# python-pipelines-demo

./: 404.html  LICENSE  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: demo.yaml
reference/python_pipelines_demo/__about__/: index.html
reference/python_pipelines_demo/__init__/: index.html
reference/python_pipelines_demo/demo/: index.html
src/python_pipelines_demo/: __about__.py  demo.py
tests/: test_demo.py
